--- a/token.env
+++ b/token.env
@@ -1,2 +1,5 @@
-TELEGRAM_API_KEY=1234567890:8485107122:AAGxVF_0neb8ZLV1Ezpu53xvGqG26EbdFSo
+TELEGRAM_API_KEY=8485107122:AAGxVF_0neb8ZLV1Ezpu53xvGqG26EbdFSo
 ADMIN_CHAT_ID=6046697939
+
+
+
